--- a/package.json
+++ b/package.json
@@ -187,12 +187,14 @@
   },
   "dependencies": {
     "axion": "^0.1.0",
+    "axios": "^0.17.1",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-flip-move": "^2.9.17",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
