--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
     "react": "^15.6.1",
+    "react-desktop": "^0.3.2",
     "react-dom": "^15.6.1",
     "react-flip-move": "^2.9.17",
     "react-hot-loader": "3.0.0-beta.6",
